# Generate-It

./: .gitignore  PUBLISH_GUIDE.md  README.md  WARP.md  main.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml  test.yml
Sample-Import/: sample_import.csv
generate_it/: __main__.py  cli.py  generator.py  storage.py  tui.py
scripts/: smoke_test.py
tests/: test_entrypoint.py  test_generator.py  test_storage.py
